<resources>
    <string name="app_name">FishQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">ada di beranda</string>
    <string name="panduan">ada di panduan</string>
    <string name="pindai">ada di pindai</string>
    <string name="panduan_1">1. Klik Pindai untuk memulai</string>
    <string name="panduan_2">2. pilih  mode sesuai keadaan ikan yang akan diidentifikasi kesegarannya</string>
    <string name="panduan_3">3. Pilih foto dari gallery atau potret langsung melalui kamera</string>
    <string name="panduan_4">4. Klik unggah gambar</string>
    <string name="panduan_5">5. Hasil deteksi akan ditampilkan</string>
    <string name="opening">Selamat datang!</string>
    <string name="deskripsi">FishQ (Fish Quality) siap membantu Anda dalam menilai kesegaran ikan 🐟✨</string>
    <string name="h1_waktu">Efisiensi waktu</string>
    <string name="h2_waktu">Mempercepat proses sortasi ikan.</string>
    <string name="h1_multi">Deteksi multi ikan</string>
    <string name="h2_multi">Dapat mendeteksi lebih dari satu ikan dalam satu tangkapan layar.</string>
    <string name="h1_toggle">Dual mode</string>
    <string name="h2_toggle">Dua mode deteksi untuk kondisi ikan beku dan tidak beku.</string>
    <string name="h1_user">Mudah digunakan</string>
    <string name="h2_user">Mudah digunakan di mana saja dengan gawai.</string>
    <string name="beku">BEKU</string>
    <string name="tidak_beku">TIDAK BEKU</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="judul_login">Login</string>
    <string name="deskripsi_login">Login untuk melanjutkan memakai aplikasi</string>
    <string name="judul_email">e-mail</string>
    <string name="hint_email">yourname@email.com</string>
    <string name="judul_pass">password</string>
    <string name="hint_pass">Enter your password</string>
    <string name="forgot">Lupa Password?</string>
    <string name="tombol_login">MASUK</string>
    <string name="register">Tidak punya akun? Daftar di sini</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="judul_regis">DAFTAR AKUN</string>
    <string name="tombol_regis">DAFTAR</string>
    <string name="balik_login">Sudah memiliki akun? Masuk di sini</string>
    <string name="judul_reset">LUPA PASSWORD?</string>
    <string name="deskripsi_reset">Masukkan email</string>
    <string name="tombol_reset">RESET PASSWORD</string>
    <string name="tombol_reset_back">Kembali</string>
</resources>